SF Primes/src/objects/Discovery_Workbook_Interviewee__c.object
<CustomObject>
    <description>Contains the Interviewee providing input during a Discovery for a given project/site and associated with its respective Workbook.</description>
    <fields>
        <fullName>Discovery_Workbook_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discovery Workbook Category</label>
        <referenceTo>Discovery_Workbook_Category__c</referenceTo>
        <relationshipLabel>Discovery Workbook Interviewees</relationshipLabel>
        <relationshipName>Discovery_Workbook_Interviewees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Discovery Workbook Interviewees</relationshipLabel>
        <relationshipName>Discovery_Workbook_Interviewees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Discovery Workbook Interviewee</label>
    <nameField>
        <displayFormat>DWI2-{0000}</displayFormat>
        <label>Discovery Workbook Interviewee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Workbook Interviewees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>